2/2.6/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: write-read-svc
  namespace: ping-pong-namespace
spec:
  type: ClusterIP
  selector:
    app: write-read
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
  namespace: ping-pong-namespace
spec:
  type: ClusterIP
  selector:
    app: write-read
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
