2/2.6/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: write-read-ingress
  namespace: ping-pong-namespace
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: write-read-svc
            port:
              number: 2345
      - path: /pong
        pathType: Prefix
        backend:
          service:
            name: pong-svc
            port:
              number: 2346
